[project]
name = "catway"
version = "1.1"
authors = [
  { name="ZAID", email="y8838@hotmail.com" },
]
description = "Create tempmail based on https://mail.catway.org :D"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp",
  "asyncio",
  "requests",
]

[project.urls]
Homepage = "https://github.com/zaid5o5/catway"
Issues = "https://github.com/zaid5o5/catway/issues"